feat: 全功能测试优化与架构升级落地
- 测试基建：新增 155 个测试用例编排器、E2E Playwright 核心流程测试、并发/风控/WebSocket 专项测试

- 安全加固：统一 401/403 错误码、方法级 @PreAuthorize 权限注解、操作日志审计、JWT 强密钥、支付幂等分布式锁

- 性能优化：管理后台大屏 Redis 缓存、Service 层慢查询监控、Vite vendor 分包与懒加载

- 业务补全：优惠券生命周期、VIP、城际班线、发票、消息通知、活动 Banner 等模块

- 监控运维：Spring Boot Actuator + Prometheus 端点

- 图片 CDN：Trae text-to-image 头像与 Banner 生成

- 文档同步：项目宪法、架构文档、API 文档、CI 流水线